// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ListView renders as bullet list 1`] = `
<div
  data-node-view-wrapper=""
  style="pointer-events: none; white-space: normal;"
>
  <ul
    as="ul"
    data-node-view-content=""
    style="white-space: pre-wrap;"
  />
</div>
`;

exports[`ListView renders as ordered list 1`] = `
<div
  data-node-view-wrapper=""
  style="pointer-events: none; white-space: normal;"
>
  <ol
    as="ol"
    data-node-view-content=""
    style="white-space: pre-wrap;"
  />
</div>
`;
